prevent x-overflow from breaking layout

--- a/lesscss/spell.less
+++ b/lesscss/spell.less
@@ -2,6 +2,7 @@
   width: 300px;
   max-width: 300px;
   overflow-y: scroll;
+  overflow-x: hidden;
   flex-shrink: 1;
 }
 
